[B]1.0.5[/B]
- [Fix] Fixed v18 playing issues

[B]1.0.4[/B]
- [Fix] Force session cache refresh if required

[B]1.0.3[/B]
- Fixed broken authentication URLs
- Force cache refresh after upgrade

[B]1.0.2[/B]
- Replaced deprecated authentication procedure
- Added episode title to main title

[B]1.0.1[/B]
- Fixed broken streaming URLs

[B]1.0.0[/B]
- Improved integration with Kodi features
  (bookmarks, media infos, favorites, playlists, ...)
- Redesigned for extensibility

[B]0.5.1[/B]
- Fixed dependencies

[B]0.5.0[/B]
- Fixed cache storage path
- Added zappylib integration
- Added LiveTV access (favorites + all channels)

[B]0.2.2[/B]
- Fixed bug in session management
- Fixed addon.xml
- Fixed localization string ID's
- Added fanart
- Added strings.po localization file format

[B]0.2.1[/B]
- first release