@@ -1,4 +1,4 @@
-Copyright (c) 2014-2019, Pascal Nançoz
+Copyright (c) 2014-2020, Pascal Nançoz
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
